refactor: 참석자 저장 및 전체 조회 로직 수정
- 응답 키 설정
- default 설정 추가